--- a/pixiewps.1
+++ b/pixiewps.1
@@ -98,6 +98,6 @@ pixiewps --pke <pke> --pkr <pkr> --e-hash1 <e-hash1> --e-hash2 <e-hash2> --authk
 .PP
 pixiewps -e <pke> -r <pkr> -s <e-hash1> -z <e-hash2> -a <authkey> -n <e-nonce>
 .SH AUTHOR
-Pixiewps was developed by wi7ire.
+Pixiewps was developed by wiire.
 .PP
 This manual page was written by Daniel Echeverry <epsilon77@gmail.com> and Samuel Henrique <samueloph@gmail.com> for the Debian project, but can be used by other projects as well.
