Updated usage, deprecated -S

--- a/pixiewps.1
+++ b/pixiewps.1
@@ -4,7 +4,7 @@
 .SH DESCRIPTION
 .IP
 Pixiewps is a tool written in C used to bruteforce offline the WPS PIN method exploiting
-the low or non-existing entropy of some Access Points, the so-called "pixie dust attack".
+the low or non-existing entropy of some Access Points, the so-called "pixie-dust attack".
 .IP
 It is meant for educational purposes only.
 .IP
